backend/error8.log
node : (node:33232) Warning: 
Failed to load the ES module: 
D:\interpreparation\backend\sr
c\server.js. Make sure to set 
"type": "module" in the 
nearest package.json file or 
use the .mjs extension.
At line:1 char:1
+ node src/server.js 2>&1 | 
Out-File -Encoding utf8 
error8.log
+ ~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : 
    NotSpecified: ((node:332  
  32) Wa....mjs extension.:   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
(Use `node --trace-warnings 
...` to show where the 
warning was created)
D:\interpreparation\backend\sr
c\server.js:1
import express from 'express';
^^^^^^

SyntaxError: Cannot use 
import statement outside a 
module
    at wrapSafe (node:internal
/modules/cjs/loader:1692:18)
    at Module._compile (node:i
nternal/modules/cjs/loader:173
5:20)
    at Object..js (node:intern
al/modules/cjs/loader:1893:10)
    at Module.load (node:inter
nal/modules/cjs/loader:1481:32
)
    at Module._load (node:inte
rnal/modules/cjs/loader:1300:1
2)
    at 
TracingChannel.traceSync (node
:diagnostics_channel:328:14)
    at wrapModuleLoad (node:in
ternal/modules/cjs/loader:245:
24)
    at 
Module.executeUserEntryPoint 
[as runMain] (node:internal/mo
dules/run_main:154:5)
    at node:internal/main/run_
main_module:33:47

Node.js v24.12.0
